// DO NOT MODIFY
syntax = "proto3";

// DO NOT MODIFY
package wasm_rpc;

message registerRequest {
    uint32 client_id = 1;
    string client_ip = 2;
    string doc_name = 3;
}

message insertRequest {
    uint32 client_id = 1;
    uint32 pos = 2;
    string updates = 3;
}

message deleteRequest {
    uint32 client_id = 1;
    uint32 pos = 2;
    string updates = 3;
}

message endRequest {
    uint32 client_id = 1;
}

message response {
    bool succ = 1;
}

service WasmService {
    rpc register(registerRequest) returns (response);
    rpc insert(insertRequest) returns (response);
    rpc delete(deleteRequest) returns (response);
    rpc end(endRequest) returns (response);
}